@@ -5,7 +5,7 @@
 
 # Any placeholders from placeholder API will work in this file
 
-# Credit for contributions to this file: Casho, mattyhd0
+# Credit for contributions to this file: Casho, mattyhd0, Santos
 
 invalidArg: '&4Argumentos inválidos.'
 inTeam: '&4Debes estar en un equipo para hacer eso.'
@@ -21,7 +21,7 @@ prefixSyntax: '&7[%s&7] &r%s'
 bannedChar: '&4Algun carácter  que usaste no está  permitido.'
 noTeam: '&4No existe ese equipo.'
 loading: '&6Cargando...'
-internalError: '&4Algo ha salido mal mientras ejecutabas el comando, porfavor reporta el error al dueÃ±o del servidor'
+internalError: '&4Algo ha salido mal mientras ejecutabas el comando, porfavor reporta el error al propietario del servidor'
 cooldown.wait: '&4Espera %s segundos antes de realizar esa acción!'
 cost.tooPoor: '&4Eres demasiado pobre para ejecutar ese comando.'
 cost.run: '&4&l-%s'
@@ -75,7 +75,7 @@ join.notify: '&6Bienvenido &b%s &6al equipo!'
 join.notInvited: '&6No has sido invitado a ese equipo.'
 join.banned: '&4Has sido baneado del equipo.'
 join.full: '&4El equipo esta lleno.'
-open.successopen: '&6tu equipo ahora esta abierto para cualquier jugador.'
+open.successopen: '&6Tu equipo ahora esta abierto para cualquier jugador.'
 open.successclose: '&6Ahora se requiere invitación para unirse a tu equipo.'
 title.change: '&6Tu titulo ha sido cambiado a: &b%s'
 title.remove: '&6Tu titulo ha sido removido.'
@@ -87,7 +87,7 @@ title.reset: '&6Tu titulo ha sido restablecido.'
 title.noPerm: '&4No tienes permisos para cambiar el título de tu equipo.'
 info.needTeam: '&6No se pudo encontrar equipo o jugador con ese nombre.'
 info.name: '&6Nombre: &b%s'
-info.description: '&6Description: &b%s'
+info.description: '&6Descripción: &b%s'
 info.open: '&6Abierto: &b%s'
 info.level: '&6Nivel: &b%s'
 info.owner: '&6Lider: &b%s'
@@ -143,9 +143,9 @@ withdraw.success: '&6Se ha realizado el retiro.'
 withdraw.notEnough: '&6Tu equipo no tiene suficiente dinero.'
 ally.already: '&4Ahora son aliados.'
 ally.success: '&6Ahora sus equipos son aliados.'
-ally.ally: '&6Tu equipo ahora eta aliado con &b%s'
+ally.ally: '&6Tu equipo ahora está aliado con &b%s'
 ally.requested: '&6Una solicitud de alianza ha sido enviada a tu equipo.'
-ally.request: '&b%s &6ha enviado una solicitud de alianza, usa &b/team ally <equipo> &6para aceptar.'
+ally.request: '&b%s &6Ha enviado una solicitud de alianza, usa &b/team ally <equipo> &6para aceptar.'
 ally.self: '&4No puedes ser aliado de tu propio equipo.'
 ally.from: '&6Tienes una solicitud de alianza de: %s'
 ally.noRequests: '&4No tienes solicitudes de alianza.'
@@ -200,8 +200,8 @@ pvp.disabled: '&6Se ha deshabilitado el PvP para tu equipo.'
 rankup.max: '&4Ya estas en el rango máximo.'
 rankup.score: '&4Necesitas %s puntos para subir de rango.'
 rankup.money: '&4Necesitas %s en el banco del equipo para subir de rango.'
-rankup.success: '&6tu equipo ha subido de nivel.'
-tag.banned: '&4Tu etiqueta esta baneada.'
+rankup.success: '&6Tu equipo ha subido de nivel.'
+tag.banned: '&4Esa tag esta prohibida'
 tag.success: '&6La etiqueta ha sido cambiada correctamente.'
 tag.maxLength: '&4La etiqueta es demasiado larga.'
 tag.noPerm: '&4No tienes permisos para cambiar la etiqueta del equipo.'
@@ -234,7 +234,7 @@ admin.name.success: '&6El nombre del equipo ha sido cambiado.'
 admin.description.success: '&6Se ha cambiado la descripción del equipo.'
 admin.open.successopen: '&6Equipo abierto para todos.'
 admin.open.successclose: '&6Ahora solo se pueden unir al equipo con invitación.'
-admin.invite.success: '&6el jugador ha sido invitado al equipo especificado.'
+admin.invite.success: '&6El jugador ha sido invitado al equipo especificado.'
 admin.create.success: '&6Se ha creado el equipo.'
 admin.join.banned: '&4El jugador ha sido expulsado permanentemente de ese equipo.'
 admin.join.success: '&6El jugador se ha unido al equipo.'
@@ -267,7 +267,7 @@ admin.score.tooSmall: '&4La puntuación debe ser mayor a 0.'
 admin.score.success: '&6Se ha cambiado la puntuación del equipo.'
 admin.update: '&4Hay una nueva versión de BetterTeams disponible. Actualiza aquí: (https://www.spigotmc.org/resources/better-teams.17129/)'
 admin.disband.success: '&6El equipo se ha disuelto correctamente.'
-admin.color.success: '&6el color del equipo ha sido cambiado'
+admin.color.success: '&6El color del equipo ha sido cambiado'
 admin.chest.claim.success: '&6Has reclamado el cofre en nombre del equipo.'
 admin.chest.remove.success: '&6Has removido correctamente la protección del cofre.'
 admin.chest.all.success: '&6Todas las protecciones removidas para el equipo.'
@@ -332,14 +332,14 @@ help.neutral: Remueve alianzas y rechaza las solicitudes pendientes.
 help.allychat: Envía un mensaje solo a tus aliados
 help.warps: 'Ver la lista de warps de tu equipo'
 help.rankup: 'Rank your team up to get more perks'
-help.pvp: 'Toggle if pvp is enabled for your team'
+help.pvp: 'Alterna si el pvp está habilitado para tu equipo'
 help.baltop: 'Ver los equipos mas ricos'
 help.list: 'Obtiene la lista de todos los equipos del servidor'
 echest: Mira el Cofre de Ender de tu equipo
 setwarp: Pon un punto de tp para el resto de tu equipo
 warps: Mira una lista de los puntos de tp de tu equipo
 rankup: Aumenta el rango de tu equipo para obtener más beneficios
-tag: Pon el tag de tu equipo
+tag: Pon la etiqueta de tu equipo
 delwarp: Borra el Puntos de tp de tu equipo
 chest: ''
 pvp: Activa o Desactiva el pvp en tu equipo
